vbnc/vbnc/tests/Errors/30451-4.vb
Public Class SomeClass

    Public Property Prop As Integer = SomeFunc()

End Class